# downloads-organizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  organizer.py  pyproject.toml  rules.example.json
